2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c:
	* libempathy/empathy-message.c: Add missing include string.h.

2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.11.

2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-generic.c:
	* libempathy-gtk/empathy-account-widget-generic.h: Align param names
	on the left.

	* libempathy-gtk/empathy-accounts-dialog.glade:
	* libempathy-gtk/empathy-accounts-dialog.c: Simpler header to describe
	the selected account. Fixes bug #459169.

	* configure.ac: Set Collabora Ltd. in the Copyright.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Makes easier to change to
	profile order.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.c: Try to guess the
	server from the jid only if we are using the jabber profile. When we
	guessed a server don't forget to set the "server" McAccount param,
	setting the entry's text is not enough.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Improve the sort function
	a bit to have Jabber before GTalk.

2007-07-28 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.glade:
	* libempathy-gtk/empathy-accounts-dialog.c: Update the Enable/Disable
	button even if there is no account selected. Set it insensitive if no
	account is selected. Fixes bug #459012.

2007-07-27 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Sort profiles to have
	free protocols first. Fixes bug #460605.

2007-07-27 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-message.c:
	* libempathy/empathy-message.h:
	* libempathy/empathy-log-manager.c: Add message type in log files.
	Fixes bug #459579.

	* doc/*: Updated.

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>
